syntax = "proto3";

package commontype;

option java_multiple_files = true;
option java_package = "org.apache.bifromq.type";
option java_outer_classname = "QoSProto";
option optimize_for = SPEED;

enum QoS{
  AT_MOST_ONCE = 0;
  AT_LEAST_ONCE = 1;
  EXACTLY_ONCE = 2;
}
